--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -39,3 +39,39 @@ jobs:
         python manage.py runserver &
         sleep 5
         python manage.py test
+        
+  deploy:
+    needs: [build]
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout source code
+      uses: actions/checkout@v2
+    - name: Install Dependencies
+      run: |
+        set -ex
+        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+        sudo apt install ./google-chrome-stable_current_amd64.deb
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install msedge-selenium-tools
+        
+    - name: Generate deployment package
+      run: |
+        set -ex
+        python manage.py migrate
+        sleep 2
+        zip -r deploy.zip . -x '*.git*'
+    
+    - name: Deploy to EB
+      uses: einaregilsson/beanstalk-deploy@v20
+      with:
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        application_name: marketplacev1
+        environment_name: Marketplacev1-env
+        version_label: 12348
+        region: "sa-east-1"
+        deployment_package: deploy.zip
+        
+    
