--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,11 @@ sqlparse==0.4.3
 channels==3.0.5
 selenium==4.8.3
 urllib3==1.26.15
-
+sniffio==1.3.0
+sortedcontainers==2.4.0
+trio==0.22.0
+trio-websocket==0.10.2
+PySocks==1.7.1
+h11==0.14.0
+idna==3.4
+wsproto==1.2.0
