--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -38,4 +38,4 @@ jobs:
       run: |
         python manage.py runserver &
         sleep 5
-        python manage.py test
+        python manage.py tests
